# qgame

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt
.claude/: settings.local.json
assets/: test_anim.json
assets/fonts/: DejaVuSans.json  DejaVuSans.ttf.font
assets/shaders/: msdf.frag.glsl  msdf.frag.hlsl  sprite.frag.glsl  sprite.frag.hlsl  sprite.vert.glsl  sprite.vert.hlsl  sprite_compact.comp  sprite_compact.comp.glsl  sprite_culling.comp  sprite_culling.comp.glsl  sprite_culling.hlsl  sprite_gpu.frag.glsl  sprite_gpu.frag.hlsl  sprite_gpu.vert.glsl  sprite_gpu.vert.hlsl  sprite_opengl.frag.glsl  sprite_opengl.vert.glsl  sprite_sort.comp  sprite_sort.comp.glsl  sprite_sort.comp.hlsl  sprite_sort.hlsl
assets/shaders/compute/: culling.comp.glsl  sorting.comp.glsl  sprite.frag.glsl  sprite.vert.glsl
cmake/: CompileShaders.cmake  EmbedBinary.cmake
docs/: AnimatorSystem_Usage.md  DLL_EnTT_Solution.md  EDITOR_VIEWPORT.md  Engine_DLL_Summary.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GPU_Driven.md  PERFORMANCE_BENCHMARK.md  PLAN_AnimatorSystem_Evolution.md  PLAN_GPU_Driven_Rendering.md  PLAN_Month7_ComponentEditing.md  PLAN_Renderer_Evolution.md  TEST_REPORT_GPU_Driven.md
editor/: CMakeLists.txt  ComponentEditors.cpp  ComponentEditors.h  ComponentReflect.cpp  ComponentReflect.h  EditorApplication.cpp  EditorApplication.h  EditorViewportRenderer.cpp  EditorViewportRenderer.h  FieldEditors.h  Inspector.cpp  Inspector.h  main.cpp
game/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/audio/: AudioCommandQueue.h  AudioThread.h  IAudioDevice.h
src/backend/audio/sdl_mixer/: SDLMixerAudioDevice.cpp  SDLMixerAudioDevice.h
src/backend/renderer/: CommandBuffer.cpp  CommandBuffer.h  IBackendSystem.h  IRenderDevice.h  RenderPipeline.cpp  RenderPipeline.h  TextureAtlas.cpp  TextureAtlas.h  TilemapCache.cpp  TilemapCache.h
src/backend/renderer/gpu_driven/: GPUDrivenRenderer2D.cpp  GPUDrivenRenderer2D.h  InstanceBuffer.h  SpatialHashGrid.h
src/backend/renderer/opengl/: GLRenderDevice.cpp  GLRenderDevice.h
src/backend/renderer/opengl/shaders/: sprite_culling_glsl.h
src/backend/renderer/sdl_gpu/: SDLGPURenderDevice.cpp  SDLGPURenderDevice.h
src/backend/renderer/sdl_gpu/shaders_precompiled/: msdf_frag_spv.h  sprite_compact_spv.h  sprite_culling_dxil.h  sprite_culling_spv.h  sprite_frag_spv.h  sprite_gpu_frag_spv.h  sprite_gpu_vert_spv.h  sprite_sort_dxil.h  sprite_sort_spv.h  sprite_vert_spv.h
src/backend/shared/: ResourceHandle.h  Sync.h
src/core/: Assert.h  CMakeLists.txt  Handle.h  Logger.h
src/core/containers/: HandleMap.h  RingBuffer.h
src/core/math/: Color.h  Mat3.h  Rect.h  Vec2.h  Vec3.h
src/core/memory/: Arena.h  PoolAllocator.h
src/engine/: CMakeLists.txt  Export.h
src/engine/anim/: Easing.h  SpringValue.h
src/engine/api/: EditorAPI.cpp  EditorAPI.h  GameAPI.cpp  GameAPI.h  GameAPI_ExplicitInstantiation.cpp  GameAPI_ExternTemplates.h
src/engine/assets/: AssetManager.cpp  AssetManager.h  FontLoader.cpp  FontLoader.h  TextureAtlasManager.cpp  TextureAtlasManager.h
src/engine/components/: AnimatorComponent.h  FontData.h  PhysicsComponents.h  RenderComponents.h  TextComponent.h  TweenComponent.h  UIComponents.h
src/engine/input/: IInputProvider.h  InputState.h  SDLInputProvider.cpp  SDLInputProvider.h
src/engine/resources/: GPUDrivenRenderer.cpp  GPUDrivenRenderer.h  GPUSprite.h  SpriteBuffer.h
src/engine/runtime/: EngineConfig.h  EngineContext.cpp  EngineContext.h  FrameScheduler.cpp  FrameScheduler.h  SystemRegistry.h
src/engine/scene/: SceneSerializer.cpp  SceneSerializer.h
src/engine/systems/: AnimatorSystem.cpp  AnimatorSystem.h  AudioSystem.cpp  AudioSystem.h  ISystem.h  InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  TweenSystem.cpp  TweenSystem.h  UISystem.cpp  UISystem.h
src/platform/: CMakeLists.txt  FileSystem.h  InputRawEvent.h  Thread.h  Window.cpp  Window.h
tests/: CMakeLists.txt  test_audio_system.cpp  test_core.cpp  test_input_interactive.cpp  test_input_system.cpp  test_physics_system.cpp  test_render_system.cpp
tests/hello_compute/: CMakeLists.txt  hello_compute.comp  hello_compute.hlsl  main.cpp
tests/hello_compute/shaders_precompiled/: hello_compute_dxil.h  hello_compute_spv.h
tools/: bake_font.py
